--- a/style.css
+++ b/style.css
@@ -1321,7 +1321,9 @@ body {
 }
 
 .edit-message-input {
+  display: block;
   width: 100%;
+  min-height: 20px;
   padding: 6px 10px;
   font-size: 14px;
   font-family: inherit;
@@ -1330,6 +1332,8 @@ body {
   border-radius: 6px;
   background-color: #f9fafb;
   outline: none;
+  resize: none;
+  overflow: hidden;
   transition: border 0.2s ease, box-shadow 0.2s ease;
 }
 
@@ -1386,7 +1390,7 @@ body {
   color: #7b66ad;
   cursor: pointer;
   position: absolute;
-  top: 10px;
+  top: 0px;
   font-size: 14px;
 }
 
